--- a/grafana/docker-compose.override.yml
+++ b/grafana/docker-compose.override.yml
@@ -31,12 +31,15 @@ services:
       - 'c 4:7 rmw'
       # ... for /dev/input devices
       - 'c 13:* rmw'
-      - 'c 199:* rmw'
       # ... for /dev/dri devices
       - 'c 226:* rmw'
+      # ... for /dev/galcore device on i.MX8
+      - 'c 199:* rmw'
   
   kiosk:
     container_name: kiosk
+    environment:
+      - MACHINE
     # For armhf (i.MX 6- and i.MX 7-based modules) use this image:
     #image: torizon/chromium:2
     # For i.MX 8-based modules use this image:
@@ -54,8 +57,8 @@ services:
         source: /var/run/dbus
         target: /var/run/dbus
       - type: bind
-        source: /dev/dri
-        target: /dev/dri
+        source: /dev
+        target: /dev
     depends_on:
       - weston
       - grafana
@@ -64,3 +67,5 @@ services:
     device_cgroup_rules:
       # ... for /dev/dri devices
       - 'c 226:* rmw'
+      # ... for /dev/galcore device on i.MX8
+      - 'c 199:* rmw'
