opencl: use multi-stage build
It is a best practice to use multi-stage to avoid dragging build
dependencies into the runtime container.

Use the Torizon SDK container to cross-compile the app, which is faster
than native emulation, and install the binary and runtime dependencies
in the runtime container.

This reduces the final container size from about 687MB to about 304MB.

Related-to: TOR-2169

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/.gitlab-ci-scripts.yml
+++ b/.gitlab-ci-scripts.yml
@@ -145,6 +145,7 @@ variables:
                      --build-arg IMAGE_TAG=${IMAGE_TAG}
                      --build-arg GCC_PREFIX=${GCC_PREFIX}
                      --build-arg CROSS_TC_IMAGE_ARCH=${CROSS_TC_IMAGE_ARCH}
+                     --build-arg CROSS_TC_IMAGE_TAG=${CROSS_TC_IMAGE_TAG}
                      --build-arg TOOLCHAIN_ARCH=${TOOLCHAIN_ARCH}
                      --build-arg PKG_ARCH=${PKG_ARCH}
                      --cache-from ${CI_REGISTRY_IMAGE}/${IMAGE_NAME}:${GITLAB_DOCKERREGISTRY_SUFFIX_LATEST}
