Create Node.JS sample
Related-to: DWC-2764

The node.js sample is a companion to the NodeJS article, showing how to
create an app that listens on port 3000 and returns the device temperature.

Signed-off-by: Yago Mello <yago.mello@toradex.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ stages:
   - uart-gps-python
   - collectd
   - gstreamer-simple-pipeline
+  - nodejs
   - opencl
   - opencv
   - pwm
@@ -115,6 +116,16 @@ gstreamer-simple-pipeline-jobs:
   rules:
     - changes:
       - gstreamer/bash/simple-pipeline/*
+
+nodejs-jobs:
+  stage: nodejs
+  trigger:
+    include: nodejs/.gitlab-ci.yml
+    strategy: depend
+  rules:
+    - changes:
+      - nodejs/*
+      - nodejs/**/*
 
 opencl-jobs:
   stage: opencl
