demonstration: fix startup error on GPU-less SoMs
Fix the error: XDG_RUNTIME_DIR is invalid or not set in the environment
due to missing setting up the MACHINE environment for the chromium
container init script.

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/debian-container/demonstration/docker-compose.armhf-nogpu.yml
+++ b/debian-container/demonstration/docker-compose.armhf-nogpu.yml
@@ -44,6 +44,8 @@ services:
 
   kiosk:
     image: torizon/chromium-x11:2
+    environment:
+        - MACHINE
     security_opt:
       - seccomp:unconfined
     command: http://portainer:9000
