weather: fix build due to changes in influxdb-cxx
The influxdb-cxx library has moved from using cURL to cpr, see more on:
https://github.com/offa/influxdb-cxx/commit/4f1f45ed5cf440cea25de2a6afb5be7e00970678

This had two side-effects:

* The cpr dependency had to be added, and still cURL library has to be
  kept due to https://github.com/libcpr/cpr#find_package
* In the same commit, the parsing of queries without a database
  specified has been changed so it throws a runtime error.

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/weather/Dockerfile
+++ b/weather/Dockerfile
@@ -13,18 +13,28 @@ ARG CROSS_TC_IMAGE_ARCH
 ARG TOOLCHAIN_ARCH
 
 # install all required development packages
-
+COPY $TOOLCHAIN_ARCH-toolchain.cmake $TOOLCHAIN_ARCH-toolchain.cmake
 RUN dpkg --add-architecture "$CROSS_TC_IMAGE_ARCH" \
     && apt-get update && apt-get install -y --no-install-recommends \
     git \
     cmake \
     libcurl4-openssl-dev:$CROSS_TC_IMAGE_ARCH \
+    libssl-dev:$CROSS_TC_IMAGE_ARCH \
     libboost-system-dev:$CROSS_TC_IMAGE_ARCH \
     libjsoncpp-dev:$CROSS_TC_IMAGE_ARCH \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
+# Build cpr lib
+RUN git clone https://github.com/libcpr/cpr.git \
+    && mkdir cpr/build \
+    && cd cpr/build \
+    && cmake .. -DCMAKE_TOOLCHAIN_FILE=/$TOOLCHAIN_ARCH-toolchain.cmake \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DCPR_USE_SYSTEM_CURL=ON \
+    && cmake --build . \
+    && cmake --install .
+
 # Build influxdb lib
-COPY $TOOLCHAIN_ARCH-toolchain.cmake $TOOLCHAIN_ARCH-toolchain.cmake
 RUN git clone https://github.com/offa/influxdb-cxx.git \
     && mkdir influxdb-cxx/build \
     && cd influxdb-cxx/build \
@@ -46,10 +56,12 @@ FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 # install runtime libraries
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libcurl4 \
+    libssl1.1 \
     libjsoncpp24 \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 # take application executable from build container
+COPY --from=build /usr/lib/libcpr.so* /usr/lib/
 COPY --from=build /usr/lib/libInfluxDB.so* /usr/lib/
 COPY --from=build /usr/bin/weather /usr/bin/
 
