ci: tcb: create /deploy directory
TCB expects a /deploy directory. In the regular use case, this is setup
in the TCB alias created by the setup script, where a volume is passed.

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/.gitlab-ci-tcb.yml
+++ b/.gitlab-ci-tcb.yml
@@ -18,6 +18,7 @@ services:
     name: ${CI_REGISTRY}/rd/torizon-core-containers/torizoncore-builder/torizoncore-builder:bullseye-latest
     entrypoint: [ "" ]
   script:
+    - if [ -d /deploy ]; then echo "/deploy already exists"; else mkdir -v /deploy; fi
     - echo "${APP_NAME}:${APP_VERSION}-${APP_ARCH} ${DOCKER_COMPOSE_FILE}"
     # When running pipeline on your fork, you have to download the credentials file from app.torizon.io,
     # make it a base 64 string with "base64 credentials.zip --wrap=0 > credential-base64.txt"
