--- a/dlr-gstreamer/.gitlab-ci.yml
+++ b/dlr-gstreamer/.gitlab-ci.yml
@@ -39,7 +39,7 @@ docker-build-dlr-gstreamer-arm64v8:
     BASE_NAME: wayland-base-vivante
     IMAGE_NAME: arm64v8-sample-dlr-gstreamer-vivante
     IMAGE_ARCH: linux/arm64/v8
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}
   stage: build
 
 docker-deploy-dlr-gstreamer-arm64v8:
