gps: update to Bookworm
* Use the actual Dockerhub tag instead of `-latest`.
* Use virtualenv to comply with PEP 668.

Related-to: 2444

Signed-off-by: Leonardo Held <leonardo.held@toradex.com>

--- a/gps/python/.gitlab-ci.yml
+++ b/gps/python/.gitlab-ci.yml
@@ -35,10 +35,10 @@ docker-build-uart-gps-python:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm32v7-sample-uart-gps-python
     IMAGE_ARCH: linux/arm/v7
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-uart-gps-python-arm64v8:
@@ -48,10 +48,10 @@ docker-build-uart-gps-python-arm64v8:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm64v8-sample-uart-gps-python
     IMAGE_ARCH: linux/arm64/v8
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-uart-gps-python-multiarch:
