--- a/gps/python/Dockerfile
+++ b/gps/python/Dockerfile
@@ -1,5 +1,5 @@
 ARG IMAGE_ARCH=linux/arm
-ARG IMAGE_TAG=2-bullseye
+ARG IMAGE_TAG=3-bookworm
 ARG BASE_NAME=debian
 ARG DOCKER_REGISTRY=torizon
 
@@ -8,14 +8,13 @@ FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 \
     python3-pip \
-    python3-setuptools && \
-    rm -rf /var/lib/apt/lists/*
-
-RUN pip3 install --no-cache-dir --upgrade pip
+    python3-setuptools \
+    python3-venv \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /requirements.txt
 
-RUN pip install --no-cache-dir -r /requirements.txt
+RUN python3 -m venv /venv && /venv/bin/pip3 install --no-cache-dir -r /requirements.txt
 
 COPY readgps.py /usr/bin
 
