--- a/sht31/kiosk/Dockerfile
+++ b/sht31/kiosk/Dockerfile
@@ -2,9 +2,9 @@ ARG BASE_NAME=chromium
 ARG IMAGE_ARCH=linux/arm
 # For Apalis iMX8 use IMAGE_ARCH=linux/arm64
 ARG IMAGE_TAG=2
-ARG KIOSK_DOCKER_REGISTRY=torizon
+ARG DOCKER_REGISTRY=torizon
 
-FROM --platform=$IMAGE_ARCH $KIOSK_DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
 # Switch to root user to install additional packages
 USER root
