--- a/sht31/flaskapp/Dockerfile
+++ b/sht31/flaskapp/Dockerfile
@@ -1,7 +1,7 @@
 ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm
 # For Apalis iMX8 use IMAGE_ARCH=linux/arm64
-ARG IMAGE_TAG=2-bullseye
+ARG IMAGE_TAG=3-bookworm
 ARG DOCKER_REGISTRY=torizon
 
 FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
