sht31: sht31-influxdb: update to bookworm
* Use actual Dockerhub tags instead of `-latest`.
* Use virtualenv to comply with PEP 668.

Related-to: TOR-2444

Signed-off-by: Leonardo Held <leonardo.held@toradex.com>

--- a/sht31/sht31-influxdb/Dockerfile
+++ b/sht31/sht31-influxdb/Dockerfile
@@ -1,7 +1,7 @@
 ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm
 # For Apalis iMX8 use IMAGE_ARCH=linux/arm64
-ARG IMAGE_TAG=2-bullseye
+ARG IMAGE_TAG=3-bookworm
 ARG DOCKER_REGISTRY=torizon
 
 FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
@@ -12,6 +12,7 @@ RUN apt-get update \
     python3-influxdb \
     wait-for-it \
     python3-pip \
+    python3-venv \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 COPY sht31module /sht31module
@@ -19,5 +20,5 @@ RUN  cd sht31module && python3 setup.py install
 
 COPY sht31-influxdb.py /usr/bin
 
-RUN pip3 install --no-cache-dir pyserial pynmea2
+RUN python3 -m venv /venv && /venv/bin/pip3 install --no-cache-dir pyserial pynmea2
 COPY gps/gps.py /usr/bin
