--- a/sht31/sht31-influxdb/.gitlab-ci.yml
+++ b/sht31/sht31-influxdb/.gitlab-ci.yml
@@ -35,10 +35,10 @@ docker-build-uart-sht31-influxdb:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm32v7-sample-uart-sht31-influxdb
     IMAGE_ARCH: linux/arm/v7
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-uart-sht31-influxdb-arm64v8:
@@ -48,10 +48,10 @@ docker-build-uart-sht31-influxdb-arm64v8:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm64v8-sample-uart-sht31-influxdb
     IMAGE_ARCH: linux/arm64/v8
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
   stage: build
 
 docker-build-uart-sht31-influxdb-multiarch:
