weather: update to Bookworm
* Use actual Dockerhub tags instead of `-latest`.
* Add patch to compile cpr with newer version of curl.
* Move to unified `DOCKER_REGISTRY` variable.
* Use libjsoncpp25

Related-to: TOR-2444

Signed-off-by: Leonardo Held <leonardo.held@toradex.com>

--- a/weather/.gitlab-ci.yml
+++ b/weather/.gitlab-ci.yml
@@ -35,10 +35,10 @@ docker-build-weather:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm32v7-sample-weather
     IMAGE_ARCH: linux/arm/v7
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
     CROSS_TC_IMAGE_ARCH: armhf
     TOOLCHAIN_ARCH: armhf
   stage: build
@@ -50,10 +50,10 @@ docker-build-weather-arm64v8:
     - export MINOR="${DEBIAN_MINOR}"
     - export PATCH="${DEBIAN_PATCH}"
   variables:
-    BASE_NAME: base
+    BASE_NAME: debian
     IMAGE_NAME: arm64v8-sample-weather
     IMAGE_ARCH: linux/arm64/v8
-    IMAGE_TAG: ${DEBIAN_RELEASE}-latest
+    IMAGE_TAG: ${DEBIAN_RELEASE_NUMBER}-${DEBIAN_RELEASE}
     CROSS_TC_IMAGE_ARCH: arm64
     TOOLCHAIN_ARCH: aarch64
   stage: build
